# hometask

para-task-01/: list_task.py  string_task.py  w.txt  wordcount.py
para-task-02/: copies.py
para-task-03/: strassen.py
para-task-04/: jat`.py  model.py
para-task-05/: folder.py  model.py  printer.py
para-task-06/: .fuse_hidden0000026a00000002  CMakeLists.txt  Makefile  computation.c  computation.h  main  main.c  mergesort.c  mergesort.h  thread_pool.c  thread_pool.h
para-task-08/: Fp1.hs  hw8.hs
para-task-09/: Tree.hs
para-task-10/: 1.sql  2.sql  3.sql  4.sql  5.sql
para-task-11/: fibgen.py  model.py  test_fibgen.py  test_model.py
